Add detail about G4 equivalency
G4 without any parameters is same as M400

--- a/_gcode/M400.md
+++ b/_gcode/M400.md
@@ -12,7 +12,7 @@ codes:
 
 long: This command causes all GCode processing to pause and wait in a loop until all moves in the planner are completed.
 
-notes:
+notes: G4 without any parameters is same as M400
 
 parameters:
 
