Remove "disable" from mask list; add disable usage example

--- a/_gcode/M111.md
+++ b/_gcode/M111.md
@@ -14,7 +14,6 @@ long: |
   Marlin has several debug bits that can be set, in combination, to help configure, troubleshoot, and debug the firmware. Add up the debug bits you need:
 
   Mask|Name|Description
-  0|DISABLE|Disable extra debug output.
   1|ECHO|Echo all commands sent to the parser.
   2|INFO|Print extra informational messages.
   4|ERRORS|Print extra error messages.
@@ -46,6 +45,9 @@ examples:
   -
     pre: Enable everything except dry-run mode
     code: M111 S247 ; 255 - 8
+  -
+    pre: Disable previously set extra debugging output.
+    code: M111 S0
 
 ---
 
